--- a/main.html
+++ b/main.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-<div class="holder">
-    <div class="item">Item 1</div>
-    <div class="item">Item 2</div>
-    <div class="item">Item 3</div>
-</div>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      .holder {
+        width: 500px;
+        height: 500px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+      }
+      #box {
+        width: 100px;
+        height: 100px;
+      }
+      .red {
+        background-color: red;
+        order: 2;
+      }
+      .blue {
+        background-color: blue;
+        order: 3;
+      }
+      .green {
+        background-color: green;
+        order: 1;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="holder">
+      <div id="box" class="red">1</div>
+      <div id="box" class="blue">2</div>
+      <div id="box" class="green">3</div>
+    </div>
+  </body>
 </html>
